mesh/app/redisservice/redis-virtual-service.yml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: redis-cart.my-apps.svc.cluster.local
  namespace: my-apps
spec:
  awsName: redis-cart.my-apps.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: redis-cart-virtual-router
